--- a/app/styles/sass/main.sass
+++ b/app/styles/sass/main.sass
@@ -2,7 +2,7 @@
 @use 'sass:color'
 
 @import config
-@import jquery-fancybox-min.css
+@import fancybox.css
 @import font-awesome-min.css
 @import 'blocks/**/*'
 
