--- a/app/styles/sass/blocks/_modal.sass
+++ b/app/styles/sass/blocks/_modal.sass
@@ -1,3 +1,92 @@
+.modal_wrap
+	max-width: 450px
+	width: 400px
+	height: auto
+	border: none
+	border-radius: 5px
+	background-color: #f4f4f4
+	padding: 30px
+.modal_form
+	width: 100%
+.modal_fild
+	margin-bottom: 15px
+	input
+		display: block
+		width: 100%
+		border: 1px solid #ccc
+		border-radius: 3px
+		overflow: hidden
+		padding: 5px
+	textarea
+		width: 100%
+		border: 1px solid #c6c6c6
+		border-radius: 3px
+		padding: 3px 10px
+		font-size: 1.1em
+		font-style: italic
+		overflow: hidden
+
+label
+	display: block
+	font-style: italic
+	font-size: 1rem
+	margin-bottom: 0
+.req
+	color: red
+
+
+.fild_massege
+	display: inline
+	color: red 
+	font-size: .9rem
+	font-style: italic
+.modal_btn
+	display: block
+	width: 180px
+	margin: 20px auto 5px auto
+	text-transform: uppercase
+	letter-spacing: 1px
+	white-space: normal
+	vertical-align: top
+	//background: #807052
+	background-color: darken($accent, 10%)
+	padding: 10px 8px
+	text-align: center
+	line-height: 18px
+	color: #fff
+	outline: 0
+	border: none
+	border-radius: 3px
+	font-weight: 400
+	cursor: pointer
+	transition: background-color .25s ease
+	&:hover
+		background-color: $accent
+		
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .modal
 	width: 100%
 	height: 100%
