--- a/app/styles/sass/blocks/_showcase.sass
+++ b/app/styles/sass/blocks/_showcase.sass
@@ -89,8 +89,48 @@
 		order: 2
 
 .showcase_video
+
+
+
+
+.showcase_video_wrap
 	width: 90%
-	margin: 50px auto
+	margin: 120px auto
+.showcase_video_link
+	display: block
+	position: relative
+	width: 100%
+	height: 100%
+	border: none
+	border-radius: 3px
+	overflow: hidden
+	position: relative
+	margin-bottom: 1rem
+	&::before
+		content: ''
+		position: absolute
+		inset: 0
+		padding-top: 56.25%
+.showcase_video_bg
+	width: 100%
+	height: auto
+	object-fit: cover
+	object-position: 50% 50%
+
+
+
+.showcase_video_icon
+	display: block
+	width: 70px
+	height: 70px
+	position: absolute
+	right: 50%
+	top: 50%
+	transform: translate(50%, -50%)
+	transition: fill 0.25s ease 0s, opacity 0.25s ease 0s
+
+
+
 
 
 @media only screen and (max-width : 1800px)
