--- a/app/styles/sass/blocks/_showcase.sass
+++ b/app/styles/sass/blocks/_showcase.sass
@@ -70,7 +70,7 @@
 		text-decoration: none
 		background: $darck
 .showcase_item-img
-	width: 50%		
+	width: 50%
 	background-position: center
 	background-repeat: no-repeat
 	background-size: cover
@@ -166,6 +166,8 @@
 		width: 100%
 		height: 450px
 
+	.showcase_video_wrap
+		width: 100%
 
 
 	.showcase_item:nth-child(odd)
