--- a/app/styles/sass/blocks/_goods.sass
+++ b/app/styles/sass/blocks/_goods.sass
@@ -12,11 +12,11 @@
 	width: 100%
 	position: relative
 	background-color: #fff
-	margin-bottom: 15px	
+	margin-bottom: 15px
 	&:before
 		content: ''
 		display: block
-		padding-top: 110%			
+		padding-top: 110%
 	a
 		position: absolute
 		display: flex
@@ -105,7 +105,7 @@
 	text-align: right
 	font-weight: 600
 	padding: 4px 9px 4px 9px
-	svg 
+	svg
 		display: block
 		width: 55px
 		height: 22px
@@ -141,7 +141,7 @@
 		width: 100%
 		height: 100%
 		fill: $darck
-		
+
 
 
 
@@ -172,14 +172,14 @@
 	//border-bottom: 1px solid #e6e6e6
 	a
 		width: 100%
-		display: block 
+		display: block
 		color: $darck
 		transition: color .25s ease
 		&:hover
 			color: $title
 			text-decoration: none
 
-.goods_desc
+
 
 .goods_doc-title
 	margin: 10px auto 30px auto
@@ -207,7 +207,7 @@
 .goods_doc-list
 	width: 50%
 	padding-right: 20px
-	ul 
+	ul
 		padding-left: 0
 		font-size: 1em
 	li
@@ -217,7 +217,7 @@
 			position: relative
 			padding-left: 10px
 			transition: color .25s ease
-			i 
+			i
 				//font-weight: 600
 				margin-right: 10px
 				color: $accent
@@ -225,20 +225,20 @@
 		a:hover
 			color: $accent
 
-				
-				
+
+
 
 .goods_doc-size
 	width: 50%
 	height: 100%
 	display: flex
 	justify-content: center
-	a 
+	a
 		display: block
 		padding: 2px
 		background-color: darken($body, 2%)
 
-	img	
+	img
 		max-height: 350px
 
 .goods_access
@@ -246,6 +246,25 @@
 	padding-top: 25px
 	padding-bottom: 25px
 	background-color: darken($body, 3%)
+
+
+.goods_acsessuary
+	display: none
+.acsessuary
+	border: 1px solid #ddd
+	border-radius: 3px
+	font-size: 1rem
+	max-width: 600px
+	border-collapse: collapse
+
+	tr:nth-child(odd)
+		background-color: #f9f9f9
+	td
+		border: 1px solid #ddd
+		line-height: 1.35
+		padding: 8px
+		vertical-align: top
+
 
 // ≥1200px
 +media-breakpoint-down(lg)
