--- a/app/styles/sass/blocks/_main.sass
+++ b/app/styles/sass/blocks/_main.sass
@@ -40,6 +40,7 @@ b, strong
 .head
 	display: flex
 	align-items: flex-start
+	position: relative
 	width: 100%
 	height: 570px
 	overflow: hidden
@@ -58,7 +59,6 @@ b, strong
 	background-repeat: no-repeat
 	background-size: cover
 	text-align: center
-
 .naw-wrap
 	display: flex
 	justify-content: space-between
@@ -68,6 +68,7 @@ b, strong
 	height: 100px
 	color: #fff
 	background: linear-gradient(to bottom, rgba(0,0,0,0.8) 0%,rgba(0,0,0,0) 100%)
+	z-index: 1
 
 
 .naw-btn
@@ -241,6 +242,15 @@ b, strong
 	margin-bottom: 20px
 	border: 5px solid darken($body, 5%)
 	border-radius: 2px
+
+.contact-map
+	width: 100%
+	height: 500px
+	border: 1px solid #e7e7e7
+	border-radius: 3px
+	overflow: hidden
+	padding: 3px
+	background-color: #fff
 
 @media only screen and (max-width : 1200px)
 	.logo
